@@ -25,8 +25,7 @@
  * @test
  * @summary Test behavior of Pretty
  * @modules jdk.compiler
- * @compile --enable-preview -source ${jdk.version} PrettyTest.java
- * @run main/othervm --enable-preview PrettyTest
+ * @enablePreview
  */
 
 import java.io.IOException;
@@ -55,7 +54,6 @@ public class PrettyTest {
                       "         b = o instanceof R(var s);\n" +
                       "         b = o instanceof R2(R(var s), String t);\n" +
                       "         b = o instanceof R2(R(var s), var t);\n" +
-                      "         b = o instanceof R(String s) r;\n" +
                       "    }\n" +
                       "    record R(String s) {}\n" +
                       "    record R2(R r, String s) {}\n" +
@@ -72,7 +70,6 @@ public class PrettyTest {
                                   b = o instanceof R(/*missing*/ s);
                                   b = o instanceof R2(R(/*missing*/ s), String t);
                                   b = o instanceof R2(R(/*missing*/ s), /*missing*/ t);
-                                  b = o instanceof R(String s) r;
                               }
                               \n\
                               class R {
