@@ -22,8 +22,9 @@
  */
 package org.openjdk.bench.java.lang.foreign;
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.BenchmarkMode;
 import org.openjdk.jmh.annotations.Fork;
@@ -36,10 +37,9 @@ import org.openjdk.jmh.annotations.State;
 import org.openjdk.jmh.annotations.TearDown;
 import org.openjdk.jmh.annotations.Warmup;
 
+import java.lang.foreign.SegmentScope;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 
 @BenchmarkMode(Mode.AverageTime)
@@ -104,27 +104,27 @@ public class MemorySessionClose {
 
     @Benchmark
     public MemorySegment confined_close() {
-        try (MemorySession session = MemorySession.openConfined()) {
-            return MemorySegment.allocateNative(ALLOC_SIZE, 4, session);
+        try (Arena arena = Arena.openConfined()) {
+            return arena.allocate(ALLOC_SIZE, 4);
         }
     }
 
     @Benchmark
     public MemorySegment shared_close() {
-        try (MemorySession session = MemorySession.openShared()) {
-            return MemorySegment.allocateNative(ALLOC_SIZE, 4, session);
+        try (Arena arena = Arena.openShared()) {
+            return arena.allocate(ALLOC_SIZE, 4);
         }
     }
 
     @Benchmark
     public MemorySegment implicit_close() {
-        return MemorySegment.allocateNative(ALLOC_SIZE, 4, MemorySession.openImplicit());
+        return MemorySegment.allocateNative(ALLOC_SIZE, 4, SegmentScope.auto());
     }
 
     @Benchmark
     public MemorySegment implicit_close_systemgc() {
         if (gcCount++ == 0) System.gc(); // GC when we overflow
-        return MemorySegment.allocateNative(ALLOC_SIZE, 4, MemorySession.openImplicit());
+        return MemorySegment.allocateNative(ALLOC_SIZE, 4, SegmentScope.auto());
     }
 
     // keep
